# carbon-offset-validator-api

./: main.py  processor.py  pyproject.toml  render.yaml  requirements.txt
myvenv/: pyvenv.cfg
myvenv/Scripts/: activate  activate.bat
