[project]
name = "main"
version = "0.8"
description = "yes"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = "yes"}
requires-python = "^3.10.0"
dependencies = [
    "uvicorn (>=0.34.2,<0.35.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
